<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tac_num_pad_background_color"
    android:minHeight="280dp"
    android:orientation="vertical"
    android:weightSum="4"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button1"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="1"
            android:text="@string/number_1" />

        <TextView
            android:id="@+id/vertical_1_1"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button2"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="2"
            android:text="@string/number_2" />

        <TextView
            android:id="@+id/vertical_1_2"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button3"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="3"
            android:text="@string/number_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button4"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="4"
            android:text="@string/number_4" />

        <TextView
            android:id="@+id/vertical_2_1"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button5"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="5"
            android:text="@string/number_5" />

        <TextView
            android:id="@+id/vertical_2_2"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button6"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="6"
            android:text="@string/number_6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button7"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="7"
            android:text="@string/number_7" />

        <TextView
            android:id="@+id/vertical_3_1"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button8"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="8"
            android:text="@string/number_8" />

        <TextView
            android:id="@+id/vertical_3_2"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button9"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="9"
            android:text="@string/number_9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/button_custom1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_backspace_numpad_phase3"
                android:tag="custom1" />
        </LinearLayout>

        <TextView
            android:id="@+id/vertical_4_1"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button0"
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="0"
            android:text="@string/number_0" />

        <TextView
            android:id="@+id/vertical_4_2"
            style="@style/VerticalSeparatorDefaultStyle"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <LinearLayout
            style="@style/PadButtonDefaultStylePhase3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/button_custom2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_done_tick"
                android:tag="custom2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>